--- a/.github/workflows/ShadowRip099.yml
+++ b/.github/workflows/ShadowRip099.yml
@@ -1,4 +1,4 @@
-# WRITTEN AND MANAGED BY Shadow Hacker 99
+# WRITTEN BY Shadow Hacker 99 AND MANAGED BY The Wizard 99
 
 name: Shadow Ripping Tools
 
